--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <version>6.8.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>6.9.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
